Correct typos in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             <input type="radio" id="so" name="class" value="Sophomore">
                             <label for="so">Sophomore</label><br>
                             <input type="radio" id="jn" name="class" value="Junior">
-                            <label for="ju">Junior</label><br>
+                            <label for="jn">Junior</label><br>
                             <input type="radio" id="sn" name="class" value="Senior">
                             <label for="sn">Senior</label><br><br>
                         <input type="submit" value="Submit">
@@ -106,9 +106,9 @@
                             <input type="checkbox" id="c2" name="c2" value="CSE 101">
                             <label for="c2"> CSE 101 </label><br>
                             <input type="checkbox" id="c3" name="c3" value="CSE 105">
-                            <label for="vehicle3"> CSE 105 </label><br>
+                            <label for="c3"> CSE 105 </label><br>
 
-                        <label> I am most familiar with this language: </label>
+                        <label for="language"> I am most familiar with this language: </label>
                             <input list="languanges" name="language" id="language">
                             <datalist id="languages">
                             <option value="Java">
