Correct another typo in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <label for="c3"> CSE 105 </label><br>
 
                         <label for="language"> I am most familiar with this language: </label>
-                            <input list="languanges" name="language" id="language">
+                            <input list="languages" name="language" id="language">
                             <datalist id="languages">
                             <option value="Java">
                             <option value="Python">
